# backend

./: Anchor.toml  README.md  package-lock.json  package.json
programs/swap-router/: Cargo.toml
programs/swap-router/src/: constants.rs  lib.rs  router.rs
programs/vault/: Cargo.toml
programs/vault/src/: errors.rs  vault.rs
scanner/: arbitrageDetector.ts  config.ts  executor.ts  index.ts  package.json  priceService.ts  scanner.ts  vercel.json
scanner/api/: frontend-example.tsx  logStreamer.ts  package.json  routes.ts  server.ts
scripts/: setup.sh
src/: index.ts
src/services/: jupiterService.ts
tests/:  vault.test.ts  router.test.ts
