[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"
path = "src/vault.rs"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
router = { path = "../swap-router", features = ["cpi"] }